--- a/jquery.html
+++ b/jquery.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Fetch App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script src="https://code.jquery.com/jquery.js"></script>
   <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"></script>
@@ -14,35 +15,36 @@
 </head>
 
 <body>
-    <div class="class container">
-    <h1 class="display-3 mb-5" > Simple Fetch API </h1>
+  <div class="class container">
+    <h1 class="display-3 mb-5"> Simple Fetch API </h1>
 
     <div class="d-flex justify-content-center">
-  <button class = "btn btn-primary mr-4" id="fetch-local-text"> Fetch from Text</button>
-  <br>
-  <button class = "btn btn-success mr-4" id="fetch-local-json"> Fetch Local json</button>
-  <br>
-  <button class = "btn btn-danger mr-4" id="fetch-api"> Fetch Api Data</button>
-  <br>
-</div>
-  <div id="display-local-text"></div>
-  <div id="display-local-json"></div>
-  <div id="display-api"></div>
-  <br>
-  <form id="user-posts">
-    <div class = "form-group">
-      <input type="text" id="post-title" class = "form-control" placeholder="Enter Post Title">
+      <button class="btn btn-primary mr-4" id="fetch-local-text"> Get Local Text</button>
+      <br>
+      <button class="btn btn-success mr-4" id="fetch-local-json"> Get Local json</button>
+      <br>
+      <button class="btn btn-danger mr-4" id="fetch-api"> Get Api Data</button>
+      <br>
     </div>
-    <div class = "form-group">
-      <textarea type="text" id="post-body" class = "form-control" placeholder="Enter Post"></textarea>
-    </div>
-    <div>
-    <div>
-      <input type="submit" id="submit" class = "btn btn-dark" value="submit">
-    </div>
-  </form>
+    <div id="display-local-text"></div>
+    <div id="display-local-json"></div>
+    <div id="display-api"></div>
+    <div id = "display-post"></div>
+    <br>
+    <form id="user-posts">
+      <div class="form-group">
+        <input type="text" id="post-title" class="form-control" placeholder="Enter Post Title">
+      </div>
+      <div class="form-group">
+        <textarea type="text" id="post-body" class="form-control" placeholder="Enter Post"></textarea>
+      </div>
+      <div>
+        <div>
+          <input type="submit" id="submit" class="btn btn-dark" value="submit">
+        </div>
+    </form>
 
-</div> 
+  </div>
 </body>
 
 <script src="jquery.js"></script>
