--- a/jscript.html
+++ b/jscript.html
@@ -17,7 +17,7 @@
     <h1 class="display-3 mb-5" > Simple Fetch API </h1>
 
     <div class="d-flex justify-content-center">
-  <button class = "btn btn-primary mr-4" id="fetch-local-text"> Fetch from Text</button>
+  <button class = "btn btn-primary mr-4" id="fetch-local-text"> Fetch Local Text</button>
   <br>
   <button class = "btn btn-success mr-4" id="fetch-local-json"> Fetch Local json</button>
   <br>
